# cmd/auth/main.go
@@ -99,6 +99,7 @@ func main() {
 	app.Get("/users/:id/json", authHandler.GetJSON)
 	app.Post("/users/:id/json-edited", authHandler.UploadEditedJSON)
 	app.Get("/users/:id/json-edited", authHandler.GetEditedJSON)
+	app.Post("/users/:id/json-edited-pdf", authHandler.SaveEditedJSONAndGeneratePDF)
 	app.Post("/users/:id/json-to-svg", authHandler.RenderEditedSVG)
 
 	// ============================================================
